--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -11,7 +11,7 @@ includes:
 tasks:
   start:
     cmds:
-      - docker-compose up
+      - docker-compose up --remove-orphans
 
   all-start:
     cmds:
