feat: Update folder structure

--- a/this-folder/Taskfile.yml
+++ b/this-folder/Taskfile.yml
@@ -2,13 +2,13 @@ version: 3
 
 includes:
   one-folder:
-    taskfile: one-folder/Taskfile.yml
-    dir: one-folder
+    taskfile: ../one-folder/Taskfile.yml
+    dir: ../one-folder
     optional: true
     internal: true
   another-folder:
-    taskfile: another-folder/Taskfile.yml
-    dir: another-folder
+    taskfile: ../another-folder/Taskfile.yml
+    dir: ../another-folder
     optional: true
     internal: true
 
