--- a/another-folder/docker-compose.yml
+++ b/another-folder/docker-compose.yml
@@ -2,13 +2,4 @@
 services:
   node-another-folder:
     image: node:20.16-alpine
-    volumes:
-      - volume-another-folder:/app
-    command: ['/bin/sh', '-c', 'ls -l /app']
-
-volumes:
-  volume-another-folder:
-    driver_opts:
-      type: 'none'
-      o: 'bind'
-      device: '${PWD}'
+    command: ['/bin/sh', '-c', 'ls -l /app && cron']
