--- a/another-folder/Taskfile.yml
+++ b/another-folder/Taskfile.yml
@@ -3,8 +3,5 @@ version: 3
 tasks:
   start:
     cmds:
-      - docker-compose -f docker-compose.yml -f docker-compose.override.yml up -d --remove-orphans
-      - docker-compose -f docker-compose.yml -f docker-compose.override.yml logs
-  stop:
-    cmds:
-      - docker-compose -f docker-compose.yml -f docker-compose.override.yml down -v
+      - docker-compose up --remove-orphans
+      - docker-compose down -v
