--- a/one-folder/docker-compose.yml
+++ b/one-folder/docker-compose.yml
@@ -2,5 +2,13 @@
 services:
   node-one-folder:
     image: node:20.16-alpine
-    command: ['/bin/sh', '-c', 'ls -l /app && cron']
+    command: ['/bin/sh', '-c', 'ls -l /app']
+    volumes:
+      - volume-one-folder:/app
 
+volumes:
+  volume-one-folder:
+    driver_opts:
+      type: 'none'
+      o: 'bind'
+      device: '${PWD}'
