--- a/this-folder/Taskfile.yml
+++ b/this-folder/Taskfile.yml
@@ -15,6 +15,7 @@ includes:
 tasks:
   start:
     cmds:
+      - echo $PWD
       - docker-compose up --remove-orphans
       - docker-compose down -v
 
