--- a/one-folder/Taskfile.yml
+++ b/one-folder/Taskfile.yml
@@ -3,5 +3,6 @@ version: 3
 tasks:
   start:
     cmds:
+      - echo $PWD
       - docker-compose up --remove-orphans
       - docker-compose down -v
