--- a/this-folder/docker-compose.yml
+++ b/this-folder/docker-compose.yml
@@ -2,7 +2,7 @@
 services:
   node-this-folder:
     image: node:20.16-alpine
-    command: ['/bin/sh', '-c', 'ls -l /app']
+    command: ['/bin/sh', '-c', 'ls -l /app && echo ${PWD}']
     volumes:
       - volume-this-folder:/app
 
