feat: Add pwd=taskfile dir as workaround

--- a/this-folder/Taskfile.yml
+++ b/this-folder/Taskfile.yml
@@ -16,7 +16,7 @@ tasks:
   start:
     cmds:
       - echo $PWD
-      - docker-compose up --remove-orphans
+      - "PWD={{.TASKFILE_DIR}} docker-compose up --remove-orphans"
       - docker-compose down -v
 
   all-start:
