--- a/another-folder/Taskfile.yml
+++ b/another-folder/Taskfile.yml
@@ -4,5 +4,5 @@ tasks:
   start:
     cmds:
       - echo $PWD
-      - docker-compose up --remove-orphans
+      - "PWD={{.TASKFILE_DIR}} docker-compose up --remove-orphans"
       - docker-compose down -v
